:bug: fixing transform scale bug on safari

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -619,7 +619,7 @@
                 margin: 1.35rem;
 
                 a {
-                    //display: none;
+                    -webkit-transform: scale(0%);
                     transform: scale(0%);
                     margin-bottom: 0rem
                     
@@ -687,7 +687,7 @@
                 &-active, &:hover{
                     a {
                         transition: 0.5s;
-                        //display: block;
+                        -webkit-transform: scale(100%);
                         transform: scale(100%);
                         text-decoration: none;
                         margin-bottom: 3rem;
